--- a/assets/index.html
+++ b/assets/index.html
@@ -4,16 +4,16 @@
     <title>SheetJS Live Grid Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="icon" type="image/png" href="assets/img/logo.png" />
-    <link rel="stylesheet" href="assets/css/sheetjs.css">
+    <link rel="stylesheet" href="./../assets/css/sheetjs.css">
 </head>
 <body>
-<script src="./../assets/vendor/alertify.js"></script>
-<script src="assets/vendor/jquery.min.js"></script>
-<script src="assets/vendor/jquery.handsontable.full.js"></script>
+<script src="./../vendor/alertify.js"></script>
+<script src="./../vendor/jquery.min.js"></script>
+<script src="./../vendor/jquery.handsontable.full.js"></script>
 
-<link rel="stylesheet" media="screen" href="assets/vendor/jquery.handsontable.full.css">
-<link rel="stylesheet" media="screen" href="assets/vendor/samples.css">
-<link rel="stylesheet" media="screen" href="assets/vendor/alertify.css">
+<link rel="stylesheet" media="screen" href="./../vendor/jquery.handsontable.full.css">
+<link rel="stylesheet" media="screen" href="./../vendor/samples.css">
+<link rel="stylesheet" media="screen" href="./../vendor/alertify.css">
 
 <div id="body">
     <div id="left">
@@ -60,12 +60,12 @@
     </div>
 </div>
 
-    <script src="assets/js/shim.js"></script>
-    <script src="assets/js/xlsx.full.min.js"></script>
-    <script src="assets/js/dropsheet.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="./../assets/js/shim.js"></script>
+    <script src="./../assets/js/xlsx.full.min.js"></script>
+    <script src="./../assets/js/dropsheets.js"></script>
+    <script src="./../assets/js/main.js"></script>
 
-    <script src="assets/vendor/spin.js"></script>
+    <script src="./../vendor/spin.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
