--- a/assets/index.html
+++ b/assets/index.html
@@ -10,6 +10,7 @@
 <script src="./../vendor/alertify.js"></script>
 <script src="./../vendor/jquery.min.js"></script>
 <script src="./../vendor/jquery.handsontable.full.js"></script>
+<script src="./../vendor/alertify.js"></script>
 
 <link rel="stylesheet" media="screen" href="./../vendor/jquery.handsontable.full.css">
 <link rel="stylesheet" media="screen" href="./../vendor/samples.css">
@@ -64,6 +65,11 @@
     <script src="./../assets/js/xlsx.full.min.js"></script>
     <script src="./../assets/js/dropsheets.js"></script>
     <script src="./../assets/js/main.js"></script>
+    <script src="./../assets/js/base64.min.js"></script>
+    <script src="./../assets/js/Blob.js"></script>
+    <script src="./../assets/js/downloadify.min.js"></script>
+    <script src="./../assets/js/FileSaver.js"></script>
+    <script src="./../assets/js/swfobject.js"></script>
 
     <script src="./../vendor/spin.js"></script>
 
