--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             </table>
         </div>
         <div id="hot" style="overflow: scroll" class="handsontable"></div>
+        <table class="htCore" id="table" border="1">
+        </table>
     </div>
 </div>
 
