--- a/test1.html
+++ b/test1.html
@@ -14,29 +14,11 @@
     <link rel="stylesheet" media="screen" href="vendor/jquery.handsontable.full.css">
     <link rel="stylesheet" media="screen" href="vendor/samples.css">
     <link rel="stylesheet" media="screen" href="vendor/alertify.css">
+    <link rel="stylesheet" media="screen" href="./assets/css/test1.css">
+
 </head>
-<script src="vendor/alertify.js"></script>
-<script src="vendor/jquery.min.js"></script>
-<script src="vendor/jquery.handsontable.full.js"></script>
-<script src="vendor/alertify.js"></script>
 
 <body>
-<!-- SheetJS js-xlsx library -->
-<script type="text/javascript" src="./assets/js/shim.js"></script>
-<script type="text/javascript" src="./assets/js/xlsx.full.min.js"></script>
-
-
-<script src="assets/js/shim.js"></script>
-<script src="assets/js/xlsx.full.min.js"></script>
-<script src="assets/js/dropsheets.js"></script>
-<script src="assets/js/main.js"></script>
-<script src="assets/js/base64.min.js"></script>
-<script src="assets/js/Blob.js"></script>
-<script src="assets/js/downloadify.min.js"></script>
-<script src="assets/js/FileSaver.js"></script>
-<script src="assets/js/swfobject.js"></script>
-<!-- Spinner -->
-<script src="./vendor/spin.js"></script>
 
 <pre>
 <div id="drop">
@@ -53,18 +35,35 @@ Need a file? <a href="https://obamawhitehouse.archives.gov/sites/default/files/o
 
 <b>Editable Data Table:</b> (click a cell to edit it)
 </pre>
+<div id="hot" style="overflow: scroll" class="handsontable"></div>
 
-<table class="htCore" id="table" border="1">
-</table>
+<script src="vendor/jquery.min.js"></script>
+<script src="vendor/jquery.handsontable.full.js"></script>
+<script src="vendor/alertify.js"></script>
+<!-- SheetJS js-xlsx library -->
+<script type="text/javascript" src="./assets/js/shim.js"></script>
+<script type="text/javascript" src="./assets/js/xlsx.full.min.js"></script>
 
+<script src="assets/js/dropsheets.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="assets/js/base64.min.js"></script>
+<script src="assets/js/Blob.js"></script>
+<script src="assets/js/downloadify.min.js"></script>
+<script src="assets/js/FileSaver.js"></script>
+<script src="assets/js/swfobject.js"></script>
+<!-- Spinner -->
+<script src="./vendor/spin.js"></script>
 
 <script type="text/javascript">
     var pending = false;
     var rABS = typeof FileReader !== "undefined" && typeof FileReader.prototype !== "undefined" && typeof FileReader.prototype.readAsBinaryString !== "undefined";
     function process_wb(wb) {
-        var o = XLSX.utils.sheet_to_html(wb.Sheets[wb.SheetNames[0]], {editable: true}).replace("<table", '<table id="table" border="1"')
+        var o = XLSX.utils.sheet_to_html(wb.Sheets[wb.SheetNames[0]], {editable: true});
         spinner.stop();
-        document.getElementById('table').outerHTML = o;
+//        console.log(o)
+//        console.log('---------------------------------------')
+        document.getElementById('hot').innerHTML = o;
+//        console.log(document.getElementById('hot').innerHTML );
         pending = false;
     }
     var drop = document.getElementById('drop');
@@ -120,7 +119,23 @@ Need a file? <a href="https://obamawhitehouse.archives.gov/sites/default/files/o
         if (rABS) reader.readAsBinaryString(f);
         else reader.readAsArrayBuffer(f);
     }
-
+    var _onsheet = function (json) {
+        $("#hot").handsontable({
+            data:json,
+            startRows: 5,
+            startCols: 3,
+            // stretchH: 'all',
+            rowHeaders: true,
+            colHeaders: true,
+            width: function () {
+                return availableWidth;
+            },
+            height: function () {
+                return availableHeight;
+            },
+            stretchH: 'all'
+        });
+    };
     function handleDragover(e) {
         e.stopPropagation();
         e.preventDefault();
@@ -132,9 +147,11 @@ Need a file? <a href="https://obamawhitehouse.archives.gov/sites/default/files/o
         drop.addEventListener('dragenter', handleDragover, false);
         drop.addEventListener('dragover', handleDragover, false);
         drop.addEventListener('drop', handleDrop, false);
+        drop.addEventListener('drop', _onsheet, false);
     }
 
 </script>
+
 <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-36810333-1']);
